--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.3",
         "twig/twig": "^2.12|^3.0",
-        "vich/uploader-bundle": "^1.18"
+        "vich/uploader-bundle": "^1.18",
+        "ext-intl": "*"
     },
     "config": {
         "optimize-autoloader": true,
