removed test user provider in security.yaml

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,14 +23,10 @@ security:
             entity:
                 class: App\Entity\User
                 property: email
-        test:
-            entity:
-                class: App\Entity\Test
-                property: email
 
         all_users:
             chain:
-                providers: [ 'users', 'employee_users', 'test' ]
+                providers: [ 'users', 'employee_users' ]
         # used to reload user from session & other features (e.g. switch_user)
     firewalls:
         dev:
