switch back to dev and added fixtures for User/Employee/Book class

--- a/.env
+++ b/.env
@@ -14,7 +14,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-APP_ENV=prod
+APP_ENV=dev
 APP_SECRET=28ab990f75e137d027e6a13f0de00694
 ###< symfony/framework-bundle ###
 
